--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "dev:server": "npx tsx server/app.ts"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.0",
+    "@types/express": "^5.0.0",
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "immer": "^10.1.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "use-immer": "^0.10.0"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "ts-node": "^10.9.2",
+    "use-immer": "^0.10.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "20.2.5",
     "@types/react": "18.2.37",
     "@types/react-dom": "^18.2.18",
