--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.0",
     "@types/express": "^5.0.0",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.6",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "ts-node": "^10.9.2",
